--- a/installation.qmd
+++ b/installation.qmd
@@ -1,6 +1,6 @@
 # Installation
 
-In this section, the aim is to have everyone setup with R, RStudio, and RMarkdown.
+In this section, the aim is to have everyone setup with R, RStudio, and quarto
 
 ## Overview
 
@@ -9,7 +9,7 @@ In this section, the aim is to have everyone setup with R, RStudio, and RMarkdow
 ## Questions
 
 * How do I install R?
-* How do I install rmarkdown?
+* How do I install quarto?
 * How do I install LaTeX in a sane way?
 
 ## Software Setup
@@ -32,16 +32,15 @@ https://cloud.r-project.org/bin/linux/
 
 https://www.rstudio.com/products/rstudio/download/#download
 
-## RMarkdown
+## quarto
 
 To ensure you are up to date, run the following script to install the packages.
 
 ```{r}
 #| label: install-rmd
 #| eval: false
-install.packages("rmarkdown")
+install.packages("quarto")
 install.packages("knitr")
-install.packages("tinytex")
 install.packages("here")
 install.packages("tidyverse")
 install.packages("broom")
@@ -51,25 +50,9 @@ install.packages("usethis")
 
 ## A note on PDF
 
-rmarkdown documents can be compiled to PDF, which is a great feature. In order to convert the documents to PDF, they use a software called LaTeX (\LaTeX) (pronounced la-tek or lay-tek). 
+quarto documents can be compiled to PDF, which is a great feature. In order to convert the documents to PDF, they use a software called LaTeX (\LaTeX) (pronounced la-tek or lay-tek). 
 
-Installing LaTeX [can be a pain](https://yihui.name/tinytex/pain/), but thankfully there is an easier way to install it - [`tinytex`](https://yihui.name/tinytex/). `tinytex` is an R package that installs a sane, lightweight (<200Mb) version of LaTeX. 
-
-```{r}
-#| label: run-tiny-tex
-#| eval: false
-tinytex::install_tinytex()
-```
-
-If you get the following error, **this is good**! As it means that TeX has already been installed:
-
-```
-Error: Detected an existing tlmgr at /usr/local/bin/tlmgr. It seems TeX Live has been installed (check tinytex::tinytex_root()). You have to uninstall it, or use install_tinytex(force = TRUE) if you are sure TinyTeX can override it (e.g., you are a PATH expert or installed TinyTeX previously).
-```
-
-### Problem solving with LaTeX
-
-If you have any problems with installing `tinytex`, I recommend you check out the [tinytex FAQ page](https://yihui.name/tinytex/faq/).
+Installing LaTeX is thankfully handled when you install quarto, as [quarto includes a built-in Latexmk engine](https://quarto.org/docs/output-formats/pdf-engine.html#latexmk).
 
 ## Test Script
 
@@ -78,9 +61,8 @@ You should be able to run the following code on your machine
 ```{r}
 #| label: library-test
 #| eval: false
-library(rmarkdown)
+library(quarto)
 library(knitr)
-library(tinytex)
 library(here)
 library(tidyverse)
 library(broom)
