--- a/changing-figures.qmd
+++ b/changing-figures.qmd
@@ -26,69 +26,112 @@ You can control the size and features of figures with the chunk options. In this
 
 There are many chunk options that control your output, but only a few that you really need to worry about for your figures:
 
-- `fig.align`: How do you want your figure aligned? Takes one of the following inputs: "default", "center", "left", or "right"? (**demo**)
-- `fig.cap`: Would you like a caption for your figure? It takes a character vector as input: "My Amazing Graph"
-- `fig.height` & `fig.width`: How tall and wide would you like your figure in inches? Each takes one number (e.g., 7, or 9) [Note: these numbers are not quoted]
-- `out.height` & `out.width`: The height and width of your plot in the final file. This can be handy if you like the current aspect ratio of your plot, but you want to shrink it by say 50% - which you would do with "50%". You can also include LaTeX output or HTML output. Say for example, ".8//linewidth" or "8cm" for LaTeX, or "300px" for HTML.
+- `fig-align`: How do you want your figure aligned? Takes one of the following inputs: "default", "center", "left", or "right"? (**demo**)
+- `fig-cap`: Would you like a caption for your figure? It takes a character vector as input: "My Amazing Graph"
+- `fig-height` & `fig-width`: How tall and wide would you like your figure in inches? Each takes one number (e.g., 7, or 9) [Note: these numbers are not quoted]
+
+
+<!-- - `out.height` & `out.width`: The height and width of your plot in the final file. This can be handy if you like the current aspect ratio of your plot, but you want to shrink it by say 50% - which you would do with "50%". You can also include LaTeX output or HTML output. Say for example, ".8//linewidth" or "8cm" for LaTeX, or "300px" for HTML. 
+
+These are no longer an option in Quarto
+-->
 
 For demonstration purposes, let's take a plot from earlier and show how it's output can change.
 
-* with `fig.height`, `fig.width`, `out.width`, `dev`
+* with `fig-height`, `fig-width`, `fig-format: `
+
 
 ### Your Turn {.exercise}
 
-1. Open exercise `exercises/02-rmd-figures-chunks/02-rmd-figures-chunks.Rmd` Create three figures, with the respective dimensions (`fig.height` and `fig.width`)
+1. Open exercise `exercises/02-qmd-figures-chunks/02-qmd-figures-chunks.qmd` Create three figures, with the respective dimensions (`fig-height` and `fig-width`)
     * 2x2
     * 10x10
     * 4x7
 2. Now add to those figures, the following:
-    * `fig.align = "center"`
-    * `out.width = 50%`
+    * `fig-align = "center"`
+3. Now change the output type to be "svg"
 
 ## Setting global options
 
-If we repeat adding the same chunk options for each figure, we might want to consider setting them globally. We can do this with the following code:
+If we repeat adding the same chunk options for each figure, we might want to consider setting them globally. We can do this by changing the options in the YAML:
 
-```r
-knitr::opts_chunk$set(chunk_option1 = TRUE, ...)
+```yaml
+---
+title: "02-qmd-figures-chunks"
+author: "Your Name"
+date: 2024/06/23
+format: 
+  html:
+    fig-height: 7
+    fig-width: 7
+    fig-format: png
+    fig-dpi: 300
+---
 ```
-
-(As mentioned earlier), I typically set this up in a code chunk at the start of a document.
 
 ### Your Turn {.exercise}
 
 1. Set the global options in your document to set:
-  * `fig.height`
-  * `figh.width`
-  * `dev`
+  * `fig-height`
+  * `fig-width`
+  * `fig-format`
 
-## Keeping your figures {.demo}
+## Keeping your markdown {.demo}
 
-You can set the options for your figures, which will change how they appear on the page, but this won't save the figures anywhere. In order to save the figures to file, you need to edit the YAML option `keep_md: true`:
+You can set the options for your figures, which will change how they appear on the page, but this won't save the figures anywhere. In order to save the figures to file, you need to edit the YAML option `keep-md: true`:
 
 ```YAML
 ---
 title: "Awesome report"
 author: "You"
-output:
-  html_document:
-    keep_md: true
+format: 
+  html:
+    keep-md: true
 ---
 ```
 
+## Altering the figure path figures are saved to
 
-You'll notice that this creates some folders called "FILENAME_files" - you can control the specific name of the folder by setting `fig.path` like so:
+By default, the figures are saved in a folder named after the file, e.g., 
 
-```r
-knitr::opts_chunk$set(fig.path = "figs")
+`02-qmd-figures-chunks_files/figure-htaml`
+
+If you want to change this location, you can control the specific name of the folder by setting `fig.path` like so in the YAML
+
+```yaml
+---
+title: "Awesome report"
+author: "You"
+format: 
+  html:
+    keep-md: true
+knitr:
+  opts_chunk:
+    fig.path: folder/for/figures/prefix-
+---
 ```
 
-Which would instead create a new folder aclled "figs".
+If you do now want a prefix specified, you must end this part with a slash, e.g., 
+
+```yaml
+---
+title: "Awesome report"
+author: "You"
+format: 
+  html:
+    keep-md: true
+knitr:
+  opts_chunk:
+    fig.path: figures/
+---
+```
+
+(reference: https://github.com/quarto-dev/quarto-cli/discussions/4254)
 
 ## Your Turn {.exercise}
 
-1. Save your images in your document by setting `keep_md: true`
+1. Save your images to a specific directory of your choice
 
 ## Further Reading
 
-- [Official knitr documentation](https://yihui.name/knitr/options/#plots)
+- [Official Quarto documentation on figures](https://quarto.org/docs/computations/r.html#output-formats)
